python.txt
madhuri@DESKTOP-D45N6PK:~$ python3
Python 3.8.10 (default, Jun  2 2021, 10:49:15)
[GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> "hello"
'hello'
>>> 56+90
146
>>> 76*9
684
>>> 75//9
8
>>> 62%5
2
>>> no=1
>>> if(no <10):
...     printf(no, 'single digit')
... else
        ^[[A^[[A  File "<stdin>", line 3
    else
       ^
SyntaxError: invalid syntax
>>> no=20
>>> if(no <10):
...     printf(no, 'single digit')
... else:
...     printf(no, 'multi digit')
...
Traceback (most recent call last):
  File "<stdin>", line 4, in <module>
NameError: name 'printf' is not defined
>>> no=20
>>> if(no <10):
...     print(no, 'single digit')
... else:
...     print(no, 'multi digit')
...
20 multi digit
>>>
>>>
>>>
>>>
>>> names =['name1','name2','name3','name5']
>>> names[2]
'name3'
>>> print(names[3])
name5
>>>
>>>
>>>
>>> for name in names:
...     print(name)
...
name1
name2
name3
name5
>>> name = input(enter your name")
  File "<stdin>", line 1
    name = input(enter your name")
                       ^
SyntaxError: invalid syntax
>>> name = input("enter your name")
enter your name madhuri
>>> print(name)
 madhuri
>>> x,y=0,1
>>> n=10
>>> while(a<n):
...     print(x, end=' ')
...     x,y=y,x+y
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> x,y=0,1
>>> n=10
>>> while(x<n):
...     print(x, end=' ')
...     x,y=y,x+y
...
0 1 1 2 3 5 8 >>>
>>>
>>>
>>>
>>> marks=99
>>> if(marks<50):
...     print('fail',marks)
... elif(marks<60):
...     print('c grade',marks)
... elif(marks<70):
...     print('b grade',marks)
... elif(marks<90):
...     print('a grade',marks)
... else:
...     print('a+ grade',marks)
...
a+ grade 99
>>>
>>>
>>>
>>>
>>> def calculate(no):
...     if(no>100):
...             print(no*no)
...     else:
...             print(no+no)
...
>>> calculate(200)
40000
>>> calculate(80)
160
>>> calculate(50)
100
>>>
>>>
>>>
>>>
>>> class student:
...     def setstudent(self,id,name,course):
...             self.id=id
...             self.name=name
...             self.course=course
...     def getstudent(self):
...             print(self.id, " ", self.name, " ", self.course)
...
>>> std = student()
>>> std.setstudent(123,"wincy","python")
>>> std.getstudent()
123   wincy   python
>>>
>>>
>>>
>>>
>>> from math import *
>>> a =pi
>>> print(a)
3.141592653589793
>>> print(sqrt(64))
8.0
>>> print(pow(64))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: pow expected 2 arguments, got 1
>>> print(pow(2.3))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: pow expected 2 arguments, got 1
>>> print(pow(2,3))
8.0
>>> print(round(255.35678))
255
>>>
>>>
>>>
>>> exit
Use exit() or Ctrl-D (i.e. EOF) to exit
>>>
madhuri@DESKTOP-D45N6PK:~$